# example-rust-crud-strategy-pattern

./: .gitignore  Dockerfile  LICENSE  README.md
backend/: Cargo.toml
backend/src/: cfg.rs  main.rs
backend/src/command/: mod.rs  serve.rs
backend/src/crud/: csv.rs  mod.rs  sqlite.rs
backend/src/route/: account.rs  index.rs  mod.rs  user.rs
backend/templates/: accounts.html  base.html  index.html
common/: Cargo.toml
common/src/: lib.rs
