[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.0"
actix-web = { version = "4.3.1" }
async-trait = "0.1.72"
chrono = "0.4.26"
clap = { version = "4.3.17", features = ["string", "env"] }
common = { path = "../common" }
config = "0.13.3"
cor-args = { version = "0.2.0", features = ["clap", "config"] }
directories = "5.0.1"
env_logger = "0.10.0"
futures-util = "0.3.28"
json = "0.12.4"
log = "0.4.19"
rusqlite = { version = "0.31.0", optional = true }
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
serde_yaml = "0.9.24"
tera = "1.19.0"
toml = "0.7.6"

[dev-dependencies]
unindent = "0.2.3"

[features]
default = ["sqlite"]
# default = ["csv"]
csv = []
sqlite = ["dep:rusqlite"]
